--- a/commercePhoenix/src/views/index.hbs
+++ b/commercePhoenix/src/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <header class="header-mobile">
         <h1 class="logo">DCTech</h1>
-        
+
         <button class="open-menu" id="open-menu">
             <i class="bi bi-list"></i>
         </button>
@@ -12,33 +12,39 @@
         </button>
         <header>
             <a href="/">
-                <img src="https://i.postimg.cc/MGn04zcV/logo1.png" alt="DCTech Logo" width="200 %" height="100%"> 
+                <img src="./img/logo/logo2.png" alt="DCTech Logo" width="200 %" height="100%">
             </a>
         </header>
         <nav>
             <ul class="menu">
                 <li>
-                    <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
+                    <button id="todos" class="boton-menu boton-categoria active"><i
+                            class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
                 </li>
                 <li>
-                    <button id="software" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Software</button>
+                    <button id="software" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                        Software</button>
                 </li>
                 <li>
-                    <button id="hardware" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Hardware</button>
+                    <button id="hardware" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                        Hardware</button>
                 </li>
                 <li>
-                    <button id="computadoras" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Computadoras</button>
+                    <button id="computadoras" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                        Computadoras</button>
                 </li>
                 <li>
-                    <button id="servicios" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios</button>
-                </li>
-                <li>
-                    <a href="/quieneSomos"><button id="Quienes somos" class="boton-menu boton-qsomos"><i class="bi bi-question-square-fill"></i> ¿Quienes somos?</button></a>
+                    <button id="servicios" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                        Servicios</button>
                 </li>
                 <li>
                     <a class="boton-menu boton-carrito" href="/carrito">
                         <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
                     </a>
+                </li>
+                <li>
+                    <a href="/quieneSomos"><button id="Quienes somos" class="boton-menu boton-qsomos"><i
+                                class="bi bi-question-square-fill"></i> ¿Quienes somos?</button></a>
                 </li>
             </ul>
         </nav>
@@ -57,5 +63,4 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./js/main.js"></script>
-<script src="./js/menu.js"></script> 
-<script src="/commercePhoenix/src/public/img/logo/logo1.png"></script>
+<script src="./js/menu.js"></script>
