--- a/commercePhoenix/src/views/quieneSomos.hbs
+++ b/commercePhoenix/src/views/quieneSomos.hbs
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +31,7 @@
 
 <div style="margin: 10px; justify-content: center">
 <br>
-<p>El Grupo Phoenix Dev-Lab, una iniciativa emprendedora formada por tres estudiantes de la Tecnicatura en Programación de la UTN FRSR (Facultad Regional San Rafael), surge como un renacimiento tras experiencias previas en el grupo "Darkcode". Los fundadores, motivados por su pasión por la programación y la tecnología, decidieron superar los desafíos encontrados en su trayectoria anterior y dar vida a Phoenix Dev-Lab, una empresa destinada a dejar una huella significativa en el panorama del desarrollo de software en San Rafael. </p>
+<p>El Grupo Phoenix Dev-Lab, una iniciativa emprendedora formada por tres estudiantes de la Tecnicatura en Programación de la UTN FRSR (Facultad Regional San Rafael). Los fundadores, motivados por su pasión por la programación y la tecnología, decidieron superar los desafíos encontrados en su trayectoria anterior y dar vida a Phoenix Dev-Lab, una empresa destinada a dejar una huella significativa en el panorama del desarrollo de software en San Rafael. </p>
 <br>
 <p>Este grupo de emprendedores ha consolidado su visión en la creación de soluciones innovadoras, aprovechando sus habilidades adquiridas en la Tecnicatura en Programación. Con un enfoque renovado y una determinación inquebrantable, Phoenix Dev-Lab se ha propuesto convertirse en un referente en el desarrollo de software, ofreciendo productos y servicios de alta calidad a sus clientes.</p>
 <br>
